# nlp-project

./: .gitignore  4-gram-lm.ipynb  GLOSSARY.md  README.md  bert-class.ipynb  bert_utils.py  df_ar_mini.parquet  df_ar_mini.xlsx  gen-mt5.ipynb  lm.ipynb  main.py  mt5-answer_generation.ipynb  mt5-answer_generation_test_json.ipynb  mt5_utils.py  neural-class.ipynb  neural-lm.ipynb  ngram-lm.ipynb  part3.ipynb  pyproject.toml  qa_mt5.py  rb-classifier.ipynb  span-qa-qwen.ipynb  span-qa-test-json.ipynb  span-qa.ipynb  test.json  text_generation_tests.ipynb  trans-class.ipynb  tydi_xor_rc_arb_Arab.parquet  tydi_xor_rc_arb_Arab.xlsx  tydi_xor_rc_kor_Hang.parquet
data/: __init__.py  const.py  tydi_xor_rc_arb_Arab.parquet  tydi_xor_rc_kor_Hang.xlsx  tydi_xor_rc_tel_Telu.parquet  tydi_xor_rc_tel_Telu.xlsx
ngrams/: models.py  utils.py
nlm/: models.py  probs.py  train_utils.py
