[project]
name = "masters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.0.0",
    "evaluate>=0.4.6",
    "git-filter-repo>=2.47.0",
    "graphviz>=0.21",
    "jupyter>=1.1.1",
    "markdown>=3.9",
    "matplotlib>=3.10.6",
    "mpld3>=0.5.11",
    "nbconvert>=7.16.6",
    "nltk>=3.9.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "polars>=1.33.1",
    "protobuf>=6.32.1",
    "rise>=5.7.1",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "sacremoses>=0.1.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.7",
    "tiktoken>=0.11.0",
    "tokenizers>=0.22.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers[torch]>=4.56.1",
    "tree>=0.2.4",
    "uv>=0.8.17",
    "xlsxwriter>=3.2.5",
]
